corpus/c/macro_include/case-10/snapshots/gcc15/dual_sink_structured/render.ci.txt
note: some compiler details were not fully structured; original diagnostics are preserved
src/main.c:3:40: error: [macro_include] 'Box' has no member named 'missing'
from: invocation of 'READ_FIELD' @ src/main.c:3:40
| src/main.c:3:40
| int main(void) { Box box = {1}; return READ_FIELD(box); }
|                                        ^

src/main.c:1:33: error: [macro_include] 'Box' has no member named 'missing'
src/main.c: In function 'main':
    1 | #define READ_FIELD(item) ((item).missing)
      |                                 ^
raw : src/main.c:1:33: error: 'Box' has no member named 'missing'
| src/main.c:1:33
| #define READ_FIELD(item) ((item).missing)
|                                 ^
through macro expansion: preserved macro/include context